--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Mattermost Configuration
-MATTERMOST_HOSTNAME=mattermost.votredomaine.com
+MATTERMOST_HOSTNAME=chat.djenkoit.fr
 MATTERMOST_DB_PASSWORD=choisissez_un_mot_de_passe_securise
 MATTERMOST_FEEDBACK_EMAIL=no-reply@votredomaine.com
 MATTERMOST_SMTP_SERVER=smtp.votredomaine.com
