--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
-# Mattermost Configuration
+# Mattermost Variables
+MATTERMOST_POSTGRES_IMAGE_TAG=postgres:14
+MATTERMOST_IMAGE_TAG=mattermost/mattermost-team-edition:release-8.1
+MATTERMOST_DB_TYPE=postgres
+MATTERMOST_DB_NAME=mattermostdb
+MATTERMOST_DB_USER=mattermostdbuser
+MATTERMOST_DB_PASSWORD=wkhuneTBF3F5gMUrtDaKs9Xe
+MATTERMOST_URL=https://chat.djenkoit.fr
 MATTERMOST_HOSTNAME=chat.djenkoit.fr
-MATTERMOST_DB_PASSWORD=choisissez_un_mot_de_passe_securise
-MATTERMOST_FEEDBACK_EMAIL=no-reply@votredomaine.com
-MATTERMOST_SMTP_SERVER=smtp.votredomaine.com
-MATTERMOST_SMTP_PORT=587
-MATTERMOST_SMTP_USERNAME=votre_username_smtp
-MATTERMOST_SMTP_PASSWORD=votre_password_smtp
-MATTERMOST_SMTP_SECURITY_ENABLED=true
-MATTERMOST_SMTP_CONNECTION_SECURITY=STARTTLS
+# Timezone inside container
+# A list of these tz database names can be looked up at Wikipedia
+# https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+MATTERMOST_TIMEZONE=Europe/Paris
